[gd_scene load_steps=12 format=3 uid="uid://bh0pejuvdeg81"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_0sxgf"]
[ext_resource type="Texture2D" uid="uid://cduso63qp2meh" path="res://Assets/Sprites/Button_Pressed.png" id="1_o8mey"]
[ext_resource type="Script" path="res://Scripts/chatLabel.gd" id="3_2n6y5"]
[ext_resource type="PackedScene" uid="uid://b7wtswuue502b" path="res://Scenes/fox_transparent.tscn" id="4_jnyl7"]
[ext_resource type="Texture2D" uid="uid://dmbk6l76p2lyt" path="res://Assets/Sprites/UI - 16x16 UI Tileset.png" id="5_p8fdo"]
[ext_resource type="AudioStream" uid="uid://ju1y15anxn40" path="res://Assets/SFX/click_003.ogg" id="6_3lyew"]
[ext_resource type="AudioStream" uid="uid://cnpfjwnf61kgq" path="res://Assets/SFX/food.mp3" id="7_aywba"]
[ext_resource type="AudioStream" uid="uid://bdwtw68o5ds6n" path="res://Assets/SFX/air duster 1.wav" id="8_g1jcm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7cg84"]
atlas = ExtResource("5_p8fdo")
region = Rect2(212, 67, 40, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnyww"]
atlas = ExtResource("5_p8fdo")
region = Rect2(212, 67, 40, 42)

[sub_resource type="ImageTexture" id="ImageTexture_nts02"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0sxgf")

[node name="BGRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.513726)

[node name="BtnContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 384.0
offset_bottom = 90.0
scale = Vector2(0.937, 0.937)

[node name="PetBtn" type="TextureButton" parent="BtnContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("AtlasTexture_7cg84")
texture_pressed = ExtResource("1_o8mey")
stretch_mode = 0

[node name="PetBtnLabel" type="Label" parent="BtnContainer/PetBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Pet"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FeedBtn" type="TextureButton" parent="BtnContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("AtlasTexture_7cg84")
texture_pressed = ExtResource("1_o8mey")
stretch_mode = 0

[node name="FeedBtnLabel" type="Label" parent="BtnContainer/FeedBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Feed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatBtn2" type="TextureButton" parent="BtnContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("AtlasTexture_7cg84")
texture_pressed = ExtResource("1_o8mey")
stretch_mode = 0

[node name="StatBtnLabel" type="Label" parent="BtnContainer/StatBtn2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Stats"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameBtn" type="TextureButton" parent="BtnContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("AtlasTexture_7cg84")
texture_pressed = ExtResource("1_o8mey")
stretch_mode = 0

[node name="GameBtnLabel" type="Label" parent="BtnContainer/GameBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.492
offset_bottom = -0.12001
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 27
bbcode_enabled = true
scroll_active = false
script = ExtResource("3_2n6y5")

[node name="ChatTimer" type="Timer" parent="."]
wait_time = 25.0
autostart = true

[node name="FoxTransparent" parent="." instance=ExtResource("4_jnyl7")]
texture_filter = 1
position = Vector2(0, 300)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 98.0
offset_top = 10.0
offset_right = 352.0
offset_bottom = 123.0

[node name="Love" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Love"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "‚ù§Ô∏è"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="VBoxContainer/Love"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 50.0
nine_patch_stretch = true
stretch_margin_left = 8
stretch_margin_top = 8
stretch_margin_right = 8
stretch_margin_bottom = 8
texture_over = SubResource("AtlasTexture_xnyww")
texture_progress = SubResource("ImageTexture_nts02")
texture_progress_offset = Vector2(1, 0)
tint_progress = Color(0.570628, 0, 0.0697411, 1)

[node name="Game" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Game"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "üé≤"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="VBoxContainer/Game"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 50.0
nine_patch_stretch = true
stretch_margin_left = 8
stretch_margin_top = 8
stretch_margin_right = 8
stretch_margin_bottom = 8
texture_over = SubResource("AtlasTexture_xnyww")
texture_progress = SubResource("ImageTexture_nts02")
texture_progress_offset = Vector2(1, 0)
tint_progress = Color(0.570628, 0, 0.0697411, 1)

[node name="Food" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Food"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "üç¥"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="VBoxContainer/Food"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 50.0
nine_patch_stretch = true
stretch_margin_left = 8
stretch_margin_top = 8
stretch_margin_right = 8
stretch_margin_bottom = 8
texture_over = SubResource("AtlasTexture_xnyww")
texture_progress = SubResource("ImageTexture_nts02")
texture_progress_offset = Vector2(1, 0)
tint_progress = Color(0.570628, 0, 0.0697411, 1)

[node name="BtnContainer2" type="HBoxContainer" parent="."]
visible = false
layout_direction = 2
layout_mode = 0
offset_right = 93.0
offset_bottom = 90.0
scale = Vector2(0.937, 0.937)

[node name="BackBtn" type="TextureButton" parent="BtnContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("AtlasTexture_7cg84")
texture_pressed = ExtResource("1_o8mey")
stretch_mode = 0

[node name="BackBtnLabel" type="Label" parent="BtnContainer2/BackBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3lyew")

[node name="FoodSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_aywba")
volume_db = -15.0

[node name="PetSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_g1jcm")
volume_db = -25.0
pitch_scale = 0.4

[connection signal="pressed" from="BtnContainer/PetBtn" to="." method="_on_pet_btn_pressed"]
[connection signal="pressed" from="BtnContainer/PetBtn" to="RichTextLabel" method="_on_pet_btn_pressed"]
[connection signal="pressed" from="BtnContainer/PetBtn" to="FoxTransparent" method="_on_pet_btn_pressed"]
[connection signal="pressed" from="BtnContainer/FeedBtn" to="." method="_on_feed_btn_pressed"]
[connection signal="pressed" from="BtnContainer/FeedBtn" to="RichTextLabel" method="_on_feed_btn_pressed"]
[connection signal="pressed" from="BtnContainer/FeedBtn" to="FoxTransparent" method="_on_feed_btn_pressed"]
[connection signal="pressed" from="BtnContainer/StatBtn2" to="." method="_on_stat_btn_2_pressed"]
[connection signal="pressed" from="BtnContainer/GameBtn" to="." method="_on_game_btn_pressed"]
[connection signal="pressed" from="BtnContainer/GameBtn" to="FoxTransparent" method="_on_game_btn_pressed"]
[connection signal="timeout" from="ChatTimer" to="RichTextLabel" method="_on_chat_timer_timeout"]
[connection signal="pressed" from="BtnContainer2/BackBtn" to="." method="_on_back_btn_pressed"]
